Creating docker based graphite-api playbook
Change-Id: I492e1a84eb58d08a886eeec9031cb0df9df389be

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
+- include: build-graphite-api.yml
+  when: graphite_api_build_enabled
+  tags: [build-graphite-api]
 
-- include: graphite-api.yml
+- include: run-graphite-api.yml
   when: graphite_api_enabled
-  tags: [graphite-api]
+  tags: [run-graphite-api]
